package com.main.entities;

public enum TipoCliente {
	PERSONA_NATURAL,
	EMPRESA,
	CLIENTE_NORMAL
}
