package com.main.entities;

public enum TipoDocumento {
	DNI, RUC, CE, PASAPORTE
}
