package com.main.entities;

public enum TipoPago {
	EFECTIVO, TARJETA
}
